kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
     serviceAccountName: monitoring
     containers:
     - name: nginx
       image: nginx:latest
       livenessProbe:
         exec:
           command:
           - cat
           - /homework/index.html
         initialDelaySeconds: 5
         periodSeconds: 5
       readinessProbe:
         httpGet:
           path: /index.html
           port: 8000
         initialDelaySeconds: 5
         periodSeconds: 5
       lifecycle:
         preStop:
           exec:
             command: ["/bin/sh","-c","rm -rf /homework/index.html"]
       ports:
       - containerPort: 8000
       volumeMounts:
       - name: workdir
         mountPath: /homework
       - name: nginx-conf
         mountPath: /etc/nginx/conf.d/default.conf
         subPath: nginx.conf
  # These containers are run during pod initialization
     dnsPolicy: Default
     volumes:
     - name: workdir
       emptyDir: {}
     - name: nginx-conf
       configMap:
         name: nginx-conf
     nodeSelector:
       homework: "true"
